--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Opgave 6 | Secure File Storage</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <section>
+        <h1>Velkommen til Opgave 6 i 2. Semester</h1>
+      </section>
+    </main>
+  </body>
 </html>
