Tilføjelse af Gitignore fil! + div.

--- a/gammel-udkast/public/index.html
+++ b/gammel-udkast/public/index.html
@@ -8,7 +8,8 @@
   <body>
     <main>
       <section>
-        <h1>Velkommen til Opgave 6 i 2. Semester</h1>
+        <h1>🔐 Secure File Storage</h1>
+        <p>Velkommen! Upload og download filer sikkert.</p>
       </section>
     </main>
   </body>
